--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install -g @angular/cli
-    npm install
-    ng build --prod
+    npm install yarn 
+    yarn add -g @angular/cli
+    yarn
+    ng build
   displayName: 'npm install and build'
